# src/routes/userRoute.ts
@@ -21,9 +21,9 @@ router.put("/reset", resetPassword())
 
 router.post('/login', userLogin())
 
-router.get("/", isUserAuthenticated(client), getUser())
+router.get("/", isUserAuthenticated(), getUser())
 
-router.delete("/logout",isUserAuthenticated(client), logOut())
+router.delete("/logout",isUserAuthenticated(), logOut())
 
 
 
